- Setup beagle-cli to use Typescript with compilation to Babel

--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,39 @@
-.DS_Store
-npm-debug.log
-.idea
-.vscode
-testing
-node_modules
-lib-cov
-coverage
-cov-pt*
-*.seed
-*.log
+**/test/output*
+**/test/temp
 *.csv
 *.dat
+*.gz
+*.log
 *.out
 *.patch
 *.pid
-*.gz
-**/test/output*
-**/test/temp
-test/temp
+*.seed
+.DS_Store
+.idea
 .release.json
+.vscode
+/src/lib
+babel-plugin-transform-react-beagle/flow-typed/babel-nodes.js
+beagle-cli/logs
+beagle-cli/pids
+beagle-cli/results
+beagle-lexer/logs
+beagle-lexer/pids
+beagle-lexer/results
+cov-pt*
+coverage
+lib-cov
+node_modules
+npm-debug.log
 package-lock.json
+packages/pug-error/lib
+scripts/tsconfig.json
+test/temp
+testing
 yarn-error.log
 
-scripts/tsconfig.json
-packages/pug-error/lib
-babel-plugin-transform-react-beagle/flow-typed/babel-nodes.js
-/src/lib
+# Only for things properly ported to TypeScript 
+# In the future this will be a simple *.js, but during the porting phase we have to do this one-by-one so important files don't get deleted 
 
-
-beagle-cli/pids
-beagle-cli/logs
-beagle-cli/results
-
-beagle-lexer/pids
-beagle-lexer/logs
-beagle-lexer/results
-
+beagle-cli/index.js
+beagle-cli/test/index.js
