--- a/beagle-webclient/package.json
+++ b/beagle-webclient/package.json
@@ -22,6 +22,7 @@
 		"playwright": "^1.55.1",
 		"svelte": "^5.39.5",
 		"svelte-check": "^4.3.2",
+		"svelte-preprocess": "^6.0.3",
 		"tailwindcss": "^4.1.14",
 		"typescript": "^5.9.2",
 		"vite": "^7.1.7",
@@ -30,7 +31,10 @@
 	},
 	"dependencies": {
 		"@sveltejs/adapter-static": "^3.0.10",
+		"beagle-main": "^3.0.1",
+		"highlight.js": "^11.11.1",
 		"sass": "^1.93.2",
-		"svelte-preprocess": "^6.0.3"
+		"svelte-highlight": "^7.8.4",
+  "pug": "npm:beagle-main@^3.0.1"
 	}
 }
