--- a/beagle-webclient/package.json
+++ b/beagle-webclient/package.json
@@ -14,27 +14,28 @@
 		"test": "npm run test:unit -- --run"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^6.1.0",
-		"@sveltejs/kit": "^2.43.2",
-		"@sveltejs/vite-plugin-svelte": "^6.2.0",
+		"@sveltejs/adapter-auto": "^6.1.1",
+		"@sveltejs/kit": "^2.46.4",
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/vite": "^4.1.14",
 		"@vitest/browser": "^3.2.4",
-		"playwright": "^1.55.1",
-		"svelte": "^5.39.5",
-		"svelte-check": "^4.3.2",
+		"playwright": "^1.56.0",
+		"svelte": "^5.39.11",
+		"svelte-check": "^4.3.3",
 		"svelte-preprocess": "^6.0.3",
 		"tailwindcss": "^4.1.14",
-		"typescript": "^5.9.2",
-		"vite": "^7.1.7",
+		"typescript": "^5.9.3",
+		"vite": "^7.1.9",
 		"vitest": "^3.2.4",
 		"vitest-browser-svelte": "^1.1.0"
 	},
 	"dependencies": {
 		"@sveltejs/adapter-static": "^3.0.10",
+		"beagle-error": "^1.3.5",
 		"beagle-main": "^3.0.1",
 		"highlight.js": "^11.11.1",
+		"pug": "npm:beagle-main@^3.0.1",
 		"sass": "^1.93.2",
-		"svelte-highlight": "^7.8.4",
-  "pug": "npm:beagle-main@^3.0.1"
+		"svelte-highlight": "^7.8.4"
 	}
 }
