--- a/beagle/packages/beagle-error/package.json
+++ b/beagle/packages/beagle-error/package.json
@@ -1,6 +1,6 @@
 {
   "name": "beagle-error",
-  "version": "1.3.4",
+  "version": "1.3.5",
   "description": "Standard error objects for beagle",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -18,7 +18,7 @@
   "author": "s1nistr4",
   "license": "MIT",
   "scripts": {
-    "build": "babel src --out-dir ./ --extensions \".ts\" --copy-files"
+    "build": "babel src --out-dir ./lib --extensions \".ts\" --copy-files"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.27.1"
